several small fixes to spacing

--- a/css/events.css
+++ b/css/events.css
@@ -1,7 +1,7 @@
 /* Main content styles */
 main {
     padding: 40px 20px;
-    padding-top: 230px;
+    padding-top: 160px;
     background-color: #f4f4f4; /* Light background for the main area */
     border: 2px solid #6B3E0A; /* Darker border to frame the content */
     border-radius: 8px; /* Rounded corners */
@@ -14,9 +14,9 @@ main {
     background-color: rgba(11, 18, 7, 0.796); /* Semi-transparent dark background */
     color: rgb(243, 231, 221); /* Text color for contrast */
     padding: 20px; /* Padding for content */
-    margin: 0 45px;
+    margin: 0 20px;
     border-radius: 8px; /* Rounded corners */
-    margin-bottom: 30px; /* Space between sections */
+    margin-bottom: 10px; /* Space between sections */
 }
 
 /* Headings and paragraphs within events */
@@ -38,6 +38,7 @@ main {
 
 .event-post {
     background-color: #2b1a39; /* Dark background for event posts */
+    height: auto;
     border: 1px solid #271731d8; /* Darker border */
     border-radius: 8px; /* Rounded corners */
     padding: 10px; /* Padding for content */
