--- a/css/styles2.css
+++ b/css/styles2.css
@@ -343,11 +343,13 @@ footer .social-icons a:hover {
 
     #wallets .wallet-image {
         width: 50%;
+        margin: 0px 15px;
     }
 
     .wallet-info {
         max-width: 100%;
         text-align: center;
+        margin-bottom: 15px;
     }
 
     .wallet-info p {
